# fridge-ingredient-management-system

./: .gitignore  AGENTS.md  README.md
.agents/skills/fridge-embedded-portability-check/: SKILL.md
.agents/skills/fridge-interface-contract-guard/: SKILL.md
.agents/skills/fridge-system-closure-check/: SKILL.md
.agents/skills/fridge-validation-evidence-pack/: SKILL.md
configs/: cloud_classifier.json  vision_stage1.cfg
cpp/: CMakeLists.txt  README.md  main.cpp
cpp/cloud_classifier/: README.md
cpp/cloud_classifier/demo/: main.cpp
cpp/cloud_classifier/include/: fine_grained_recognizer_client.hpp
cpp/cloud_classifier/src/: fine_grained_recognizer_client.cpp
cpp/cloud_classifier/tests/: test_main.cpp
cpp/configs/: module_1_event_capture.cfg  module_2_yolo.cfg  module_3_fine_grained.cfg  module_4_inventory.cfg  module_5_local_service.cfg
cpp/include/: debug_report.hpp  event_detector.hpp  frame_selector.hpp  roi_motion.hpp  runtime_config.hpp  types.hpp  video_io.hpp
cpp/module_1_event_capture/: README.md
cpp/module_1_event_capture/include/: frame_selector.hpp  roi_motion.hpp  stable_state_capture.hpp  types.hpp  video_io.hpp
cpp/module_1_event_capture/src/: frame_selector.cpp  roi_motion.cpp  runtime_config.cpp  stable_state_capture.cpp  video_io.cpp
cpp/module_2_yolo_analysis/: README.md
cpp/module_2_yolo_analysis/demo/: session_runner.cpp
cpp/module_2_yolo_analysis/include/: yolo_diff_analyzer.hpp  yolo_runtime.hpp
cpp/module_2_yolo_analysis/src/: debug_report.cpp  event_detector.cpp  yolo_diff_analyzer.cpp  yolo_runtime.cpp
cpp/module_3_fine_grained/: CMakeLists.txt  README.md
cpp/module_3_fine_grained/demo/: main.cpp
cpp/module_3_fine_grained/include/: fine_grained_recognizer_client.hpp
cpp/module_3_fine_grained/src/: fine_grained_recognizer_client.cpp
cpp/module_3_fine_grained/tests/: test_main.cpp
cpp/module_4_inventory/: README.md
cpp/module_4_inventory/include/: inventory_engine.hpp  sqlite_inventory_store.hpp
cpp/module_4_inventory/src/: inventory_engine.cpp  sqlite_inventory_store.cpp
cpp/module_5_local_service/: README.md
cpp/module_5_local_service/include/: local_http_server.hpp  local_service.hpp  service_config.hpp  software_closure.hpp
cpp/module_5_local_service/src/: local_http_server.cpp  local_service.cpp  local_service_server_main.cpp  service_config.cpp  software_closure.cpp  software_closure_sqlite.cpp
cpp/src/: debug_report.cpp  event_detector.cpp  frame_selector.cpp  main.cpp  roi_motion.cpp  runtime_config.cpp  video_io.cpp
cpp/tests/: debug_local_http_server.cpp  debug_module_1_event_capture.cpp  debug_module_2_yolo_analysis.cpp  debug_module_3_fine_grained.cpp  debug_module_4_inventory.cpp  debug_module_5_local_service.cpp  debug_software_closure.cpp  debug_software_closure_sqlite.cpp  debug_sqlite_persistence.cpp  test_main.cpp
cpp/tests/module12_realtime_live/: README.md  main.cpp  realtime_harness.cpp  realtime_harness.hpp
cpp/tests/module12_realtime_live/cases/: case_live_no_change.md  case_live_partial_fruit.md  case_live_put_in.md  case_live_take_out.md
cpp/tests/module12_realtime_live/configs/: test_module_1_event_capture.cfg  test_module_2_yolo.cfg  test_module_5_live.cfg
cpp/tests/module12_realtime_live/manifests/: latest_run.json
cpp/tests/module12_realtime_live/scripts/: run_live_module12_test.sh  run_live_preview.sh  stop_live_test.sh
cpp_infer/: CMakeLists.txt
cpp_infer/src/: main.cpp
data/sessions/fangru_20260322_205710/: debug.json  event.json
data/sessions/fangrunachu_20260322_205718/: debug.json  event.json
data/sessions/nachu_20260322_205729/: debug.json  event.json
data/sessions/nachufangru_20260322_205736/: debug.json  event.json
data/test_sessions/module12_realtime_live/live_20260402_132122_CAPTURE_continuous_trial01/final/: event.json  test_report.json
data/test_sessions/module12_realtime_live/live_20260402_132122_CAPTURE_continuous_trial01/meta/: run_manifest.json
data/test_sessions/module12_realtime_live/live_20260402_132122_CAPTURE_continuous_trial01/stage1/: stage1_debug.json
data/test_sessions/module12_realtime_live/live_20260402_132122_CAPTURE_continuous_trial01/stage2/: detections_after.json  detections_before.json  module2_result.json
data/test_sessions/module12_realtime_live/live_20260402_132128_CAPTURE_continuous_trial01/final/: test_report.json
data/test_sessions/module12_realtime_live/live_20260402_132128_CAPTURE_continuous_trial01/meta/: run_manifest.json
docs/: New_engineering_knowledge_card.md  a_student_progress_20260322.md  architecture.md  backend_api.md  backend_api_cpp_only.md  db_design.md  dev_plan.md  engineering_knowledge_card.md  gpt_codex_workflow.md  gpt_conversation_handoff_workflow.md  gpt_solution_design_workflow.md  project_baseline.md  system_final_design.md  system_final_design_cpp_only.md  task_split.md  vision_pipeline.md
models/: README.md
python/: __init__.py  run.py
python/app/: category_mapping.py  main.py
python/app/api/: routes.py
python/app/db/: __init__.py  database.py
python/app/models/: __init__.py  entities.py
python/app/schemas/: __init__.py  event_schema.py
python/app/services/: event_ingest.py  inventory_service.py
python/app/templates/: index.html
python/cloud_classifier/: README.md  __init__.py  base.py  cli.py  config.py  mock.py  xiaomi_mimo.py
python/miniprogram/: README.md  package-lock.json  package.json  project.config.json  project.private.config.json
python/miniprogram/miniprogram/: app.json  app.ts  app.wxss
python/miniprogram/miniprogram/api/: confirm.ts  events.ts  inventory.ts  pending.ts  system.ts
python/miniprogram/miniprogram/config/: env.ts
python/miniprogram/miniprogram/utils/: backend.ts  event-display.ts  inventory-display.ts  request.ts
python/model_tools/: README.md  export_yolo_onnx.py
python/tests/: test_backend.py  test_cloud_classifier.py  test_cloud_classifier_cli.py
python_backend/: requirements.txt  run.py
python_backend/tests/: test_smoke.py
shared/: event_schema.json
(+196 files in other folders)
